# dbc-can-bridge

./: .gitignore  Cargo.toml  LICENSE  README.md  WEBSOCKET_API.md  docker-compose.yml  readme.md  readme.pl.md  websocket-test-client.html
backend/: Dockerfile  main.py  readme.md  requirements.txt  symulator.py
backend/schema/: database.py  fill_fake_data.py
backendJetson/: readme.md
can-receiver/: Cargo.toml  WEBSOCKET_API.md  config.txt  how.txt  readme.md
can-receiver/src/: app.rs  app_socketcan.rs  app_waveshare.rs  config.rs  main.rs
can-receiver/src/integration/: dbc_handler.rs  dbc_handler_test.rs
can-receiver/src/setup/: config.rs
can-receiver/src/websocket/: mod.rs  server.rs  types.rs
can-transmiter/: Cargo.toml
can-transmiter/src/: main.rs
database/: init.sql  readme.md
frontend/: Dockerfile  app.py  package.json  readme.md  requirements.txt
frontend/public/: index.html
frontend/src/: App.js  style.css
frontendJetson/: readme.md
perla-bus/: perla_bus.dbc  readme.md  run_simulator.sh  simulator_config.py  symulator_serial.py  test_with_receiver.sh
src/: app_waveshare.rs  main.rs
src/integration/: dbc_handler.rs  mod.rs
src/setup/: config.rs
src/websocket/: types.rs
vcan-sim/: readme.md  readme.pl.md  requirements.txt  run_simulator.sh  simulator_config.py
