[package]
name = "can-receiver"
version = "0.1.6"
edition = "2024"
authors = []
license = "MIT"

[dependencies]
can-dbc = "9.1.0"
color-eyre = "0.6.5"
embedded-can = "0.4.1"
log = "0.4.29"
simplelog = "0.12.2"
time = { version = "0.3.47", features = ["serde"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "sync", "macros"] }
tokio-tungstenite = "0.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
futures-util = "0.3.32"

# for x86_64 devices -> use waveshare_usb_can_a driver
[target.'cfg(not(all(target_os = "linux", target_arch = "aarch64")))'.dependencies]
waveshare_usb_can_a = { package = "waveshare-usb-can-a", git = "https://github.com/im-0/rust-waveshare-usb-can-a", features = ["sync"] }

# for arm64 -> use socketcan
[target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
socketcan = { version = "3.5.0", features = ["tokio"] }

[profile.dev.package."*"]
opt-level = 3
