[package]
name = "can-receiver"
version = "0.1.2"
edition = "2024"
authors = []
license = "MIT"

[dependencies]
can-dbc = "8.0.0"
color-eyre = "0.6.5"
embedded-can = "0.4.1"
log = "0.4.29"
simplelog = "0.12.2"
time = { version = "0.3.44", features = ["serde"] }
waveshare_usb_can_a = { package = "waveshare-usb-can-a", git = "https://github.com/im-0/rust-waveshare-usb-can-a", features = ["sync"] }

[profile.dev.package."*"]
opt-level = 3
